<resources>
    <string name="app_name">Animations</string>
    <string name="orion_m42">Orion M42</string>
    <string name="bryan_goff_on_unsplash">Bryan Goff on Unsplash</string>
    <string name="detail_text">The Orion Nebula, or M42, is one of the brigtest nebula from earth. With the naked eye you can sometimes see orion as the middle star in the \"sword\" of the Orion constelation.</string>
    <string name="next">Next</string>
    <string name="click_here">Click Here</string>
    <string name="key_frame_animation_1">Key Frame Animation 1</string>
    <string name="key_frame_animation_2">Key Frame Animation 2</string>
    <string name="search">Search</string>
    <string name="jordan_ultra">JORDAN ULTRA</string>
    <string name="men_s_basketball_shoe">men\'s basketball shoe</string>
    <string name="select_size">Select Size</string>
    <string name="add_to_bag">Add to bag</string>
    <string name="collapsing_toolbar">Collapsing Toolbar</string>
    <string name="lorem">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus malesuada, nisl eu rutrum ullamcorper, metus justo vehicula velit, non scelerisque leo ex at ex. Mauris fringilla facilisis neque, quis sodales dui. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dapibus consequat fermentum. Proin fringilla scelerisque nunc, ac gravida turpis volutpat et. In hac habitasse platea dictumst. Etiam rutrum laoreet mauris vitae scelerisque. Curabitur nisl odio, pharetra a porta nec, rhoncus et sapien. Praesent at sapien eu risus ullamcorper lobortis quis at nunc.

Fusce dolor tellus, aliquet sit amet est sit amet, interdum volutpat ipsum. Ut sagittis lorem erat, vel porta urna dignissim quis. Quisque elementum, orci non vestibulum tincidunt, dolor lectus laoreet dolor, ut ultrices massa quam id lorem. Vivamus mauris mi, auctor non orci vitae, aliquam vulputate urna. Phasellus volutpat sollicitudin sapien, ut iaculis leo tristique eget. Morbi accumsan sed tellus tempor maximus. Praesent malesuada ac mauris sit amet facilisis. Donec venenatis ipsum et orci tempus volutpat. In tincidunt sapien nec turpis congue, a semper dolor cursus. Nam vestibulum, tellus vel maximus eleifend, erat purus eleifend est, sit amet egestas elit mauris eu ligula. Integer ipsum urna, viverra ac velit vel, viverra malesuada lorem. Integer elementum rutrum venenatis. Duis consequat tellus eget sem facilisis, a fermentum tortor mattis. Curabitur mattis augue a augue tempus, congue convallis nibh congue. Proin lacinia, urna ac semper porta, augue augue euismod est, eu ultricies elit ex vitae dui. Pellentesque ac velit vel urna tempor posuere.

Nullam ut nulla ac metus consequat auctor et arcu. Cras ullamcorper, dolor nec aliquet placerat, nisl arcu posuere purus, gravida condimentum arcu nibh sit amet est. Suspendisse at leo leo. Vestibulum eu turpis lacus. Cras ut ullamcorper mauris. Sed mattis, ante accumsan sodales ultricies, tortor lacus vehicula augue, at congue lacus metus sed ipsum. Ut nec fermentum justo, id laoreet leo. Phasellus rutrum enim et augue luctus auctor. Nulla sed elementum mauris, in condimentum ipsum. Donec condimentum accumsan nisl in interdum. Suspendisse vel commodo nunc. In dapibus ut sapien id bibendum. In eu maximus augue. Pellentesque dignissim accumsan consectetur. Fusce sit amet tempor sem. Morbi facilisis, ligula vitae dictum dapibus, turpis sapien elementum diam, id ornare magna nulla vitae purus.

Donec vel urna mauris. Aliquam viverra non sapien at interdum. Curabitur tincidunt erat ac egestas elementum. Nam volutpat elit eget lorem eleifend, sed tempus nunc condimentum. Phasellus non ipsum euismod nulla pellentesque viverra in at mauris. Sed tincidunt massa a rhoncus elementum. Phasellus pellentesque nisl et nulla ultrices vestibulum.

Integer feugiat ultricies ligula a venenatis. Phasellus nec faucibus justo. Duis iaculis odio ut lacus posuere egestas. Cras maximus nulla sem, ut faucibus dolor dapibus at. Quisque nunc mi, vestibulum nec tempor vitae, lobortis vel libero. Etiam maximus tortor quis lorem convallis porta porta vel quam. Vestibulum gravida lorem vitae magna placerat, quis pharetra odio aliquet. Nunc id justo fringilla, pretium nibh ac, venenatis neque.
    </string>
    <string name="parallax_effect">Parallax Effect</string>
    <string name="title_text">An Interesting title</string>
    <string name="content_text">Various relevant and insightful information</string>
    <string name="m">M</string>
    <string name="lorem_short">
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
        Donec odio.
        Quisque volutpat mattis eros.
        Nullam malesuada erat ut turpis.
        Suspendisse urna nibh, viverra non, semper suscipit, posuere a, pede.
    </string>
    <string name="circular_positioning">Circular Positioning</string>
</resources>
