<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context=".activity.keyframeanimation.KeyFrameAnimationActivity">

    <ImageView
        android:id="@+id/iv_background_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/darker_gray"
        android:paddingBottom="@dimen/margin_padding_4"
        android:paddingEnd="@dimen/margin_padding_16"
        android:paddingStart="@dimen/margin_padding_16"
        android:paddingTop="@dimen/margin_padding_4"
        android:text="@string/bryan_goff_on_unsplash"
        android:textSize="@dimen/text_size_12"
        app:layout_constraintBottom_toBottomOf="@+id/tv_title"
        app:layout_constraintRight_toRightOf="@+id/tv_title"/>

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_padding_24"
        android:background="@color/colorPrimary"
        android:paddingEnd="@dimen/margin_padding_24"
        android:paddingStart="@dimen/margin_padding_24"
        android:text="@string/orion_m42"
        android:textColor="#FFFF"
        android:textSize="@dimen/text_size_48"
        app:layout_constraintRight_toLeftOf="@+id/iv_background_image"
        app:layout_constraintTop_toTopOf="parent"/>

    <View
        android:id="@+id/fadeView"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/margin_padding_30"
        android:foreground="@drawable/gradient"
        app:layout_constraintBottom_toTopOf="@+id/description"/>

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        android:paddingBottom="@dimen/text_size_48"
        android:paddingEnd="@dimen/text_size_48"
        android:paddingStart="@dimen/margin_padding_8dp"
        android:text="@string/detail_text"
        android:textColor="#FFFF"
        android:textSize="@dimen/text_size_24"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_background_image"/>

</android.support.constraint.ConstraintLayout>
